# cereon-examples

./: .gitignore
fastapi-backend/: pyproject.toml
fastapi-backend/src/: cards.py
fastapi-backend/src/reports/: overview.py  saas_metrics.py  summary.py
react-frontend/: index.html  pnpm-lock.yaml
react-frontend/src/: App.tsx
react-frontend/src/reports/: overview.tsx  saas-metrics.tsx
